  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt

---------------------------
  Jackdmp changes log
---------------------------

2008-10-02 Stephane Letz  <letz@grame.fr>
	
	* Correct file permission for jack-shm-registry POSIX shared memory segment.
	* Checking for libsamplerate in waf, fix ticket #89." 
        * Header cleanup, add --clients and --ports options in configure.

2008-09-22 Stephane Letz  <letz@grame.fr>
	
	* Cleanup jack_port_id_t/jack_port_t mess, should work again on 64 bits machines."

2008-09-20 Stephane Letz  <letz@grame.fr>
	
	* Michael Voigt JackAPI cleanup patch.

2008-09-19 Stephane Letz  <letz@grame.fr>
	
	* Michael Voigt JackTime cleanup patch.

2008-09-17 Stephane Letz  <letz@grame.fr>
	
	* New JackDriverInfo class to cleanup driver loading code.

2008-09-08 Stephane Letz  <letz@grame.fr>
	
	* Better symbols export for server and client side libraries. 

2008-09-06 Stephane Letz  <letz@grame.fr>
	
	* Correct driver hierarchy on macosx and windows targets.

2008-09-05 Stephane Letz  <letz@grame.fr>
	
	* Merge Michael Voigt "drops" branch after reorganization step.

2008-09-04 Stephane Letz  <letz@grame.fr>
	
	* Michael Voigt 4th source reorganization patch.
	* Correct JackNetDriver initialization.

2008-09-03 Stephane Letz  <letz@grame.fr>
	
	* Implement DBUS entry points to handle internal clients, add new commands in jack_control.
	* Add new "desc" (extended description) in jack_driver_desc_t, to be used by backends and internal clients.

2008-09-01 Stephane Letz  <letz@grame.fr>
	
	* Michael Voigt third source reorganization patch.
	* Add new jack_set_port_rename_callback API, jack_port_set_name is now a server request that call port rename callbacks.
